# ai-gateway-x

./: .env.example  .gitignore  Cargo.toml  QUICKSTART.md  README.md  config.toml  justfile  sessions.sample.db  setup.sh
.sqlx/: query-979ccc2628ff2e759baf7f239402434b10d1c2031c7be0fc6ebc8a1196698dc9.json  query-abb36f6e9a4e007facd8b6aae512c0bf2c6a32252ea2d44f1693ab4fe7baef57.json
anthropic/: Cargo.toml
anthropic/src/: errors.rs  event_mapper.rs  lib.rs  provider.rs  response_builder.rs  types.rs
gateway/: Cargo.toml  REFACTOR_GUIDE.md
gateway/migrations/: 001_initial.sql  002_add_tool_use.sql  003_add_non_streaming_response.sql  004_unify_response_field.sql  005_add_http_headers.sql  006_add_request_id_and_uuid.sql
gateway/src/: config.rs  db.rs  errors.rs  handlers.rs  main.rs  server.rs  thread.rs  utils.rs
http-client/: Cargo.toml
http-client/src/: lib.rs
llm-common/: Cargo.toml
llm-common/src/: lib.rs  role.rs
scripts/: create_sample_db.sh  init_db.sh
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  types.ts
web/src/components/: ExpandableRawJsonViewer.tsx  ImageViewer.tsx  InteractiveJsonViewer.tsx  RequestRoleViewer.tsx  ResponseViewer.tsx  SessionDetail.tsx  SessionList.tsx  StatusBadge.tsx
