[package]
name = "gateway"
version = "0.1.0"
edition = "2024"



[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
anyhow = "1.0.98"
anthropic = { path = "../anthropic" }
either = "1.13.0"
futures = "0.3.31"
tokio-stream = "0.1"
serde_json = "1.0.133"
reqwest = "0.12.22"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
http = "1.3.1"
uuid = { version = "1.0", features = ["v4"] }
llm-common={path="../llm-common"}
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.14"
tracing = "0.1.41"
tracing-subscriber = {version="0.3.19",features=["json", "env-filter"] }
